# honeger-test

./: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  OTIK_CLOUDFLARE_REPLICANT.md  README.md  TOOLS.md  USER.md  index.html
.clawhub/: lock.json
.openclaw/: workspace-state.json
backup/: 2026-02-15.md  2026-02-17.md  2026-02-19.md  2026-02-20.md
data/: latest-ocr.json  shopping-deals.json
memory/: 2025-01-16.md  2026-02-03.md  2026-02-08.md  2026-02-09.md  2026-02-10.md  2026-02-12.md  2026-02-19.md  2026-02-24.md
projects/: README.md
projects/sales-api/: .gitignore  CLOUDFLARE.md  PLAN.md  README.md  TODO.md  database.py  main.py  pyproject.toml  requirements.txt
projects/sales-api/api/: __init__.py  main.py  products.py  sales.py  shops.py  stats.py
projects/sales-api/api/routes/: __init__.py  products.py  shops.py  stats.py
projects/sales-api/archive/: check-sales-improved.py  check-sales-v2.py  check-sales.py  leaflet-pdf-text.py  quick-sales-check.py
projects/sales-api/models/: __init__.py  base.py  database.py  price_history.py  product.py  sale.py  shop.py
projects/sales-api/scraper/: __init__.py  fuzzy.py  kupi.py  scheduler.py
projects/sales-api/scraper/extractors/: __init__.py  akcniceny.py
projects/sales-api/scripts/: __init__.py  init_db.py  seed_shops.py
scripts/: README-sync-ollama.md  akcniceny-ocr.py  akcniceny-scraper.py  backup-memory.py  check-sales-improved.py  deploy-otto-kanban.sh  deploy-pages.sh  diagnose-reminders.sh  fix-tts-mediaPath.sh  gateway-watchdog.sh  leaflet-ocr-scanner.py  moltbook-post.json  save-bookmark.py  (+10 more)
(+50 files in other folders)
